# GaloisProbe

./: .gitattributes  .gitignore  README.md
analysis/: README.md  compute_statistical_significance.py  distinguisher_bias_moments.py  distinguisher_covariance_profiling.py  distinguisher_rank_deficiency.py  distinguisher_regression_dependence.py  distinguisher_shared_mask_collision.py  requirements.txt  utils.py
config/: experiment_configuration.json  parameters.json  schema.json
docs/: ARCHITECTURE.md  IMPLEMENTATION_CROSSCHECK.md  LIBRARY_COMPARISON.md  PROJECT_OVERVIEW.md  methodology.md
instrumentation/: CMakeLists.txt
instrumentation/openfhe/: CMakeLists.txt  dump_keys.cpp
scripts/: aggregate_multi_run_results.py  control_fresh_keys.bat  control_fresh_keys.sh  control_reuse_dump.py  control_scaled_dump.py  export_experiment_results.py  plot_results.py  run_all_multi_run.bat  run_all_multi_run.py  run_all_multi_run.sh  run_experiment.bat  run_experiment.py  run_experiment.sh  run_multi_run_suite.bat  run_multi_run_suite.py  run_multi_run_suite.sh  validate_dump.py
